[package]
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
description = "Parity Ethereum client"
license = "GPL-3.0"
name = "parity"
version = "1.5.0"

[[bin]]
name = "parity"
path = "parity/main.rs"

[build-dependencies]
rustc_version = "0.1"

[build-dependencies.ethcore-ipc-codegen]
path = "ipc/codegen"

[build-dependencies.ethcore-ipc-tests]
path = "ipc/tests"

[dependencies]
ansi_term = "0.7"
app_dirs = "1.1.1"
docopt = "0.6"
env_logger = "0.3"
fdlimit = "0.1"
isatty = "0.1"
lazy_static = "0.2"
log = "0.3"
num_cpus = "0.2"
number_prefix = "0.2"
regex = "0.1"
rpassword = "0.2.1"
rustc-serialize = "0.3"
semver = "0.5"
serde = "0.8.0"
serde_json = "0.8.0"
time = "0.1"
toml = "0.2"

[dependencies.clippy]
optional = true
version = "0.0.103"

[dependencies.ctrlc]
git = "https://github.com/ethcore/rust-ctrlc.git"

[dependencies.ethcore]
path = "ethcore"

[dependencies.ethcore-dapps]
optional = true
path = "dapps"

[dependencies.ethcore-devtools]
path = "devtools"

[dependencies.ethcore-io]
path = "util/io"

[dependencies.ethcore-ipc]
path = "ipc/rpc"

[dependencies.ethcore-ipc-hypervisor]
path = "ipc/hypervisor"

[dependencies.ethcore-ipc-nano]
path = "ipc/nano"

[dependencies.ethcore-light]
path = "ethcore/light"

[dependencies.ethcore-logger]
path = "logger"

[dependencies.ethcore-rpc]
path = "rpc"

[dependencies.ethcore-signer]
path = "signer"

[dependencies.ethcore-stratum]
path = "stratum"

[dependencies.ethcore-util]
path = "util"

[dependencies.ethsync]
path = "sync"

[dependencies.hyper]
default-features = false
version = "0.9"

[dependencies.parity-hash-fetch]
path = "hash-fetch"

[dependencies.parity-reactor]
path = "util/reactor"

[dependencies.parity-rpc-client]
path = "rpc_client"

[dependencies.parity-updater]
path = "updater"

[dependencies.rlp]
path = "util/rlp"

[dependencies.rpc-cli]
path = "rpc_cli"

[features]
dapps = ["ethcore-dapps"]
default = ["ui-precompiled"]
dev = ["clippy", "ethcore/dev", "ethcore-util/dev", "ethsync/dev", "ethcore-rpc/dev", "ethcore-dapps/dev", "ethcore-signer/dev"]
ethkey-cli = ["ethcore/ethkey-cli"]
ethstore-cli = ["ethcore/ethstore-cli"]
evm-debug = ["ethcore/evm-debug"]
evm-debug-tests = ["ethcore/evm-debug-tests"]
final = ["ethcore-util/final"]
ipc = ["ethcore/ipc", "ethsync/ipc"]
jit = ["ethcore/jit"]
json-tests = ["ethcore/json-tests"]
slow-blocks = ["ethcore/slow-blocks"]
stratum = ["ipc"]
test-heavy = ["ethcore/test-heavy"]
ui = ["dapps", "ethcore-dapps/ui", "ethcore-signer/ui"]
ui-precompiled = ["dapps", "ethcore-signer/ui-precompiled", "ethcore-dapps/ui-precompiled"]

[profile]

[profile.release]
debug = false
lto = false
panic = "abort"

[target]

[target."cfg(not(windows))"]

[target."cfg(not(windows))".dependencies]
daemonize = "0.2"

[target."cfg(windows)"]

[target."cfg(windows)".dependencies]
winapi = "0.2"
